# birdnet-vamp

./: .gitattributes  .gitignore  .graphify_python  Audacity-VampFix-3.7.7-x86_64.AppImage  BirdNET_exported_labels.txt  BirdNetPlugin (Cópia).cpp  BirdNetPlugin.cpp  BirdNetPlugin.h  CMakeLists.txt  README.md  SonicVisualiser-5.2.1-x86_64.AppImage  audacity-linux-3.7.7-x64-22.04.AppImage  audacity.sh  birdnet-vamp.cat  birdnet-vamp.n3  birdnet-vamp_COPYING.txt  birdnet_run.py  install (Cópia).sh  install.sh  sonic-visualiser.sh  sonic-visualizer.sh
.github/workflows/: build.yml
assets/: audacity.xpm  audacity16.xpm  audacity32.xpm  audacity48.xpm  gnome-mime-application-x-audacity-project.xpm
test audio/: soundscape_species_list.txt
